# cw20-wrap

./: Cargo.toml  NOTICE  README.md  config.json
.archway/: constantine-3.json
examples/: schema.rs
schema/: cw-disper-wrap.json  cw20-wrap.json
schema/raw/: execute.json  instantiate.json  query.json
src/: contract.rs  error.rs  execute.rs  lib.rs
