[package]
name = "cw20-wrap"
version = "1.0.0"
authors = [
  "Drew Taylor <drew.taylor@philabs.xyz>",
  "Giancarlos Salas <giansalex@gmail.com>"
]
edition = "2021"
description = "CosmWasm contract for wrapping native coins into cw20"
repository = "https://github.com/archid-protocol/cw20-wrap"
keywords = ["cw20", "CosmWasm", "wrapped"]
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "~1.1.2"
cw20 = "~1.1.2"
cw20-base = { version = "~1.1.2", features = ["library"]}
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }